# AliRTCSample

./: README.md
AliRTC2.5/: README.md
AliRTC2.5/Android/RtcSample/: dependencies.gradle
AliRTC2.5/Web/RtcSample/: index.css  sha256.js
AliRTC2.5/Windows/MFC Demo/: .gitignore  RtcSample.sln
AliRTC2.5/Windows/Qt Demo/: RtcSample_zh_CN.ts  configScreenDlg.ui  configdlg.h  configdlg.ui  logindlg.ui  mainwindow.cpp  mainwindow.ui  source.qrc
Android/: README.md
Android/BasicVideoCall/app/: build.gradle
Android/DingRTC-APIExample/: build.gradle  gradle.properties  settings.gradle
Android/DingRTC-APIExample/app/: build.gradle
Android/FullFeatureDemo/: .gitignore  README.md  build.gradle  gradle.properties
Android/RtcSample/: .gitignore  dependencies.gradle
Android/RtcSample/app/: build.gradle
Android/SDK/: README.md
DingRTC/: .gitignore  LICENSE  README.md
DingRTC/Android/: README.md
DingRTC/Android/BasicVideoCall/: settings.gradle
DingRTC/Android/SDK/: README.md
DingRTC/Mac/: README.md
DingRTC/Mac/SDK/: README.md
DingRTC/Server/: README.md
DingRTC/Server/csharp/: AppToken.sln
DingRTC/Server/go/: go.mod  main.go
DingRTC/Server/java/: README.md  pom.xml
DingRTC/Server/nodejs/: app_token.js  app_token_options.js  index.js  service.js
DingRTC/Server/php/: app_token.php  app_token_options.php  compress_utils.php  index.php
DingRTC/Server/python2/: app_token.py
DingRTC/Server/python3/: app_token.py
DingRTC/Web/: README.md  babel.config.js  index.html  package.json  tsconfig.json  vite.config.ts
DingRTC/Web/reactVersion/: README.md  abc.json  package.json  postcss.config.js  tsconfig.json  vite.config.js
DingRTC/Web/src/: main.tsx  store.ts
DingRTC/Web/vueVersion/: abc.json  components.d.ts  eslint.config.js  index.html  tsconfig.json
DingRTC/Windows/DingRTCSample/: DingRTCSample.sln
DingRTC/iOS/: README.md
DingRTC/iOS/SDK/: README.md
Electron/: .babelrc  .eslintrc.cjs  .gitignore  README.md  babel.config.js  electron-builder.yml  electron.vite.config.ts  getPublicPath.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
Electron/.electron-vue/: webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
Electron/src/: index.ejs
Electron/src/main/: index.js
Electron/src/preload/: index.js
Electron/src/renderer/: App.vue  main.js  tsconfig.json
Linux/C++/: README.md
Linux/C++/SDK/: README.md
Linux/C++/Samples/client/cmdline/src/: CMakeLists.txt  app_config.cc  app_config.h  app_options.h  autotest_rtcsdk_client.cc  autotest_rtcsdk_client.h  autotest_runner.cc  autotest_runner.h  autotest_tcp_client.cc  autotest_tcp_client.h  basictest_runner.cc  basictest_runner.h  capi_test_runner.cc  capi_test_runner.h  external_source_pusher.cc  external_source_pusher.h  external_source_pusher_c.cc  external_source_pusher_c.h  http_server.cc  http_server.h  httpserver_test_runner.cc  httpserver_test_runner.h  main.cc  multiengine_test_runner.cc  multiengine_test_runner.h  onertc_demo.cpp  raw_file_config.h  rtcengine_helper.cc  rtcengine_helper.h  tcp_client.cc  tcp_client.h  testing_runner.h
Linux/C++/Samples/client/qtdemo/OneRTCQtDemo/: AVFrameObserverWidget.cpp  AVFrameObserverWidget.h  AVFrameObserverWidget.ui  AppSettings.cpp  AppSettings.h  AudioSettingsWidget.cpp  AudioSettingsWidget.h  AudioSettingsWidget.ui  CMakeLists.txt  CellWidget.cpp  CellWidget.h  DeviceInfo.h  ExternalSourceWidget.cpp  ExternalSourceWidget.h  ExternalSourceWidget.ui  GeneralSettingsWidget.cpp  GeneralSettingsWidget.ui  GridConfViewControls.ui  HttpClient.cpp  HttpClient.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeetingWindow.cpp  MeetingWindow.h  MeetingWindow.ui  RenderWidget.cpp  RenderWidget.h  RtcEngineObject.cpp  RtcEngineObject.h  SettingsWindow.cpp  SettingsWindow.h  UserWidget.cpp  UserWidget.h  Utils.cpp  Utils.h  VideoSettingsWidget.cpp  VideoSettingsWidget.h  VideoSettingsWidget.ui  main.cpp  (+1 more)
Linux/C++/Samples/server_pull/: CMakeLists.txt  linux_server_pull_demo.cpp  run_pull_demo.sh
Linux/C++/Samples/server_push/: CMakeLists.txt  linux_server_push_demo.cpp  run_push_demo.sh
Linux/Java/: README.md
Linux/Java/Samples/: LinuxServerPullDemo.java  LinuxServerPushDemo.java  (+2 more)
Mac/: README.md
Mac/SDK/: README.md
MiniApp/: app.js  app.json  common.wxss  project.config.json
MiniApp/sdk/: .placeholder
MiniApp/utils/: config.js  layout.js  util.js
MiniProgram/: README.md  project.config.json  project.private.config.json
MiniProgram/miniprogram/: app.js  app.json  common.wxss  package-lock.json  package.json
Ohos/: README.md
Ohos/BasicVideoCall/: build-profile.json5  oh-package-lock.json5  oh-package.json5
Ohos/SDK/: README.md
Python/server_sdk/: README  api.i  dingrtc_wrapper.py  fake_audio.py
Server/: README.md
Server/cpp/: AppToken.h  AppTokenOptions.h  Makefile  Service.h  Utils.h  main.cpp
Server/go/: main.go
Server/java/: pom.xml
Server/nodejs/: app_token.js  index.js  service.js
Server/php/: app_token.php  bytes_utils.php  index.php  service.php  sign_utils.php
Server/python2/: app_token.py  app_token_options.py  service.py
Server/python3/: app_token.py  app_token_options.py  service.py
UniApp/: App.uvue  manifest.json  pages.json
UniApp/common/: drtc-nvue.css
UniApp/store/: index.uts
Web/: vanillaVersion.html
Web/3.0.0_RtcSample/: .eslintrc.js  .gitignore  .stylelintrc.js  babel.config.js  package.json  tsconfig.types.json  vite.config.ts
Web/RtcSample/: index.html  utils.js
Web/reactVersion/: babel.config.js  package.json  tsconfig.json  vite.config.ts
Web/vueVersion/: README.md  components.d.ts  getPublicPath.js  package.json  tsconfig.json  vite.config.ts  webpack.config.js
Windows/: README.md
Windows/CSharp Demo/: .gitignore
Windows/MFC Demo/: .gitignore
Windows/Qt Demo/: .gitignore  RtcSample.pro  ccombox.cpp  ccombox.h  configScreenDlg.cpp  configScreenDlg.h  configdlg.cpp  logindlg.cpp  logindlg.h  main.cpp  mainwindow.h  resource.h  shareFile.h
iOS/ScreenSharing/: README.md
iOS/Whiteboard/: README.md
(+1056 files in other folders)
